// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (branch bundles) should write classes _index.md 1`] = `
"---
title: \\"Classes\\"
---"
`;

exports[`Theme: (branch bundles) should write interfaces _index.md 1`] = `
"---
title: \\"Interfaces\\"
---"
`;
